# game

./: .gitignore  CMakeLists.txt  Character.cpp  Character.h  CharacterOnField.cpp  CharacterOnField.h  Command.cpp  Command.h  Data.cpp  Data.h  Game.cpp  Game.h  GameRules.cpp  GameRules.h  Player.cpp  Player.h  README.md  attackCommand.cpp  attackCommand.h  buyCommand.cpp  buyCommand.h  formTroopCommand.cpp  formTroopCommand.h  main.cpp  placeOnBttlfdCommand.cpp  placeOnBttlfdCommand.h
